--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/src/assets/dar-dinero.png"/>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Income and outgoings app</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <main>
+        <div class="begin-message">
+          <h1 class="tittle">¿preparado para darle control a tu vida financiera?</h1>
+          <button class="start-button">Comenzar</button>
+        </div>
+      </main>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
