throught javascript now it's possible to click on register button and expect registration form.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="app">
       <main>
         <div class="begin-message">
-          <h1 class="tittle">¿preparado para darle control a tu vida financiera?</h1>
+          <h1 class="tittle">¿Preparado para darle control a tu vida financiera?</h1>
           <button class="start-button">Comenzar</button>
         </div>
       </main>
